@@ -1,4 +1,8 @@
 2015-02-16 Howard Butler <howard@hobu.co>
+	* src/PJ_aitoff.c: New Winkel Tripel Inverse #250
+	from Drazen Tutic
+
+2015-02-16 Howard Butler <howard@hobu.co>
 	* src/pj_init.c: Fix #237 warning about initialization 
 	ordering due to setlocale
 
